Add button and new images

--- a/index.html
+++ b/index.html
@@ -22,13 +22,19 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <img src="img/cover.jpg" />
+  <div class="album">
+    <img src="img/cover.jpg" />
+    <div class="button">
+      <a href="https://open.spotify.com/user/lamateporunyogur/playlist/48D8fLYedhtzHkmSSYX1ZR?si=B9iLECVrRquc3v9UwPq9Mw" target="_blank">Play the album</a>
+    </div>
+  </div>
   <img src="img/album.jpg" class="large" />
-  <img src="img/space-dan.jpg" />
-  <img src="img/space-rihanna.jpg" />
+  <div class="sides">
+    <img src="img/space-dan.jpg" class="side" />
+    <img src="img/space-rihanna.jpg" class="side" />
+  </div>
   <img src="img/set.jpg" class="large" />
-  <img src="img/astrodan.jpg" />
-  <img src="img/back.jpg" />
+  <img src="img/astrodan.jpg" class="large" />
 
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
